fix project btn spacing

--- a/src/styles/index-sass/index.scss
+++ b/src/styles/index-sass/index.scss
@@ -365,7 +365,7 @@ h2 {
 
   .project-page-btn{
     left: 43%;
-    top: 90%;
+    top: 92%;
   }
 
   .container {
